--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@
       </div>
     </div>
   </div>
+  <div class="vlog-card">
+      <div class="vlog-card-content">
+        <h3>Mangalgiri vlog</h3>
+        <a href="https://youtu.be/YMJTJwI6CLw?si=q8ngtKMCf0yCdO2V" target="_blank">▶ Watch Now</a>
+      </div>
+  </div>
 
   <!-- Adventure Section -->
   <div id="adventure" class="section">
