--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
         <a href="https://youtu.be/YMJTJwI6CLw?si=q8ngtKMCf0yCdO2V" target="_blank">▶ Watch Now</a>
       </div>
     </div>
+     <div class="vlog-card">
+      <div class="vlog-card-content">
+        <h3>Srisailam Vlog Episode-1</h3>
+        <a href="https://youtu.be/Gv_syldOKS0?si=QZQEaxo8rCgmHaTD" target="_blank">▶ Watch Now</a>
+      </div>
+    </div>
   </div>
   
 
