--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </div>
      <div class="vlog-card">
       <div class="vlog-card-content">
-        <h3>Srisailam Vlog Episode-1</h3>
+        <h3>Srisailam Vlog Episode One</h3>
         <a href="https://youtu.be/Gv_syldOKS0?si=QZQEaxo8rCgmHaTD" target="_blank">▶ Watch Now</a>
       </div>
     </div>
