--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <h3>Tirupati Vlog</h3>
         <a href="https://www.playbook.com/s/uma-chandra/igQfDZD9PpsGSAipyW6g6fJB?assetToken=sHsJVAL93uCPy6fyvXA9W9Mc" target="_blank">▶ Watch Now</a>
       </div>
-    </div>
+    </div> 
     <div class="vlog-card">
       <div class="vlog-card-content">
         <h3>Mangalgiri vlog</h3>
@@ -180,7 +180,7 @@
     </div>
      <div class="vlog-card">
       <div class="vlog-card-content">
-        <h3>Srisailam Vlog-1</h3>
+        <h3>Srisailam Vlog-I</h3>
         <a href="https://youtu.be/Gv_syldOKS0?si=QZQEaxo8rCgmHaTD" target="_blank">▶ Watch Now</a>
       </div>
     </div>
