--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
         <a href="https://youtu.be/Gv_syldOKS0?si=QZQEaxo8rCgmHaTD" target="_blank">▶ Watch Now</a>
       </div>
     </div>
+      <div class="vlog-card">
+      <div class="vlog-card-content">
+        <h3>Srisailam Vlog  <span class="digits">2</span></h3>
+        <a href="https://youtu.be/nbQJQG36FBg" target="_blank">▶ Watch Now</a>
+      </div>
+    </div>
   </div>
   
 
